Fixed vertical scrollbar
Added styling rule to remove vertical scrollbar and change app height to a percentage to make more dynamic.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,17 @@
 //Figure out adding font
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-
+html, body, body > div {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
 
 .main-app-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden !important;
+  height: 100%;
   cursor: default;
   background-color: $light5;
   text-decoration: none;
